--- a/components.html
+++ b/components.html
@@ -24,80 +24,103 @@
   <body>
 
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#"><img class="" src="img/logo-claro.png" width="" height="50"/></a>
-          <h1>Administrador Virtual</h1>
+    <div class="band-black"></div>
+    <nav class="navbar">
+        <div class="band-black">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <span class="dropdown pull-right country">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-sv"></span> El Salvador <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#"><span class="flag-icon flag-icon-ar"></span> Argentina</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-br"></span> Brasil</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-cl"></span> Chile</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-co"></span> Colombia</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-cr"></span> Costa Rica</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-ec"></span> Ecuador</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-sv"></span> El Salvador</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-gt"></span> Guatemala</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-hn"></span> Honduras</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-ni"></span> Nicaragua</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-pa"></span> Panamá</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-py"></span> Paraguay</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-pe"></span> Perú</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-pr"></span> Puerto Rico</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-do"></span> República Dominicana</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-uy"></span> Uruguay</a></li>
+                      </ul>
+                        </span>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div class="pre-header hidden-xs">
+            <div class="container">
+                <div class="col-md-12">
+                    <ul class="title-claro list-unstyled">
+                        <li>Personas</li> 
+                        <li>Empresas</li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right user-list">
+                        <li id="" class="dropdown">
+                            <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">sac_sv <span class="caret"></span> </a>
+                            <ul class="dropdown-menu" aria-labelledby="drop3">
+                                <li><a href="#">Cerrar sesión</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#"><img class="" src="img/logo-claro.png" width="" height="50"/></a>
+                        <h1>Administrador Virtual</h1>
+                    </div>
+                    <a class="second-brand pull-right" href="#"><img class="" src="img/logo-claro-empresas.png" width="" height="45"/></a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Link</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Accesos <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#"><strong>Usuarios</strong></a></li>
-                  <li><a href="#">Op1</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#"><strong>Roles</strong></a></li>
-                  <li><a href="#">Op1</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reportes<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Op1</a></li>
-                  <li><a href="#">Op2</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Planes y tarifas<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Op1</a></li>
-                  <li><a href="#">Op2</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plataforma<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Op1</a></li>
-                  <li><a href="#">Op2</a></li>
-                </ul>
-            </li>
-            <li class="dropdown active">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Clientes<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><strong>Configuración clientes</strong></li>
-                  <li><a href="#">Información cliente</a></li>
-                  <li><a href="#">Servicios globales</a></li>
-                  <li><a href="#">Configuración</a></li>
-                  <li><a href="#">Modificar clave</a></li>
-                  <li><a href="#">Búsqueda de cliente</a></li>
-                  <li><a href="#">Transacciones de clientes</a></li>
-                  <li><a href="#">Crear líneas</a></li>
-                  <li><a href="#">Ayuda</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Administración</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Monitoreo<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Op1</a></li>
-                  <li><a href="#">Op2</a></li>
-                </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li id="fat-menu" class="dropdown">
-              <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">sac_sv <span class="caret"></span> </a>
-              <ul class="dropdown-menu" aria-labelledby="drop3">
-                <li><a href="#">Cerrar sesión</a></li>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">One more separated link</a></li>
               </ul>
             </li>
           </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
+
+
+    </div>
 
     <div class="container">
 
