--- a/index.html
+++ b/index.html
@@ -32,86 +32,104 @@
 
   <body class="signin">
     <div class="band-black"></div>
-    <nav class="navbar navbar-default">
-      <div class="band-black">
+    <nav class="navbar">
+        <div class="band-black">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <span class="dropdown pull-right country">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-sv"></span> El Salvador <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#"><span class="flag-icon flag-icon-ar"></span> Argentina</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-br"></span> Brasil</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-cl"></span> Chile</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-co"></span> Colombia</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-cr"></span> Costa Rica</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-ec"></span> Ecuador</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-sv"></span> El Salvador</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-gt"></span> Guatemala</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-hn"></span> Honduras</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-ni"></span> Nicaragua</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-pa"></span> Panamá</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-py"></span> Paraguay</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-pe"></span> Perú</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-pr"></span> Puerto Rico</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-do"></span> República Dominicana</a></li>
+                        <li><a href="#"><span class="flag-icon flag-icon-uy"></span> Uruguay</a></li>
+                      </ul>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pre-header hidden-xs">
+            <div class="container">
+                <div class="col-md-12">
+                    <ul class="title-claro list-unstyled">
+                        <li>Personas</li> 
+                        <li>Empresas</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         <div class="container">
-          <div class="col-md-12">
-            <span class="dropdown pull-right country">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="flag-icon flag-icon-sv"></span> El Salvador <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#"><span class="flag-icon flag-icon-ar"></span> Argentina</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-br"></span> Brasil</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-cl"></span> Chile</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-co"></span> Colombia</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-cr"></span> Costa Rica</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-ec"></span> Ecuador</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-sv"></span> El Salvador</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-gt"></span> Guatemala</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-hn"></span> Honduras</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-ni"></span> Nicaragua</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-pa"></span> Panamá</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-py"></span> Paraguay</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-pe"></span> Perú</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-pr"></span> Puerto Rico</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-do"></span> República Dominicana</a></li>
-                <li><a href="#"><span class="flag-icon flag-icon-uy"></span> Uruguay</a></li>
-              </ul>
-            </span>
-          </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#"><img class="" src="img/logo-claro.png" width="" height="50"/></a>
+                        <h1>Administrador Virtual</h1>
+                    </div>
+                    <a class="second-brand pull-right" href="#"><img class="" src="img/logo-claro-empresas.png" width="" height="45"/></a>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="pre-header hidden-xs">
-        <div class="container">
-          <div class="col-md-12">
-            <ul class="title-claro list-unstyled">
-              <li>Personas</li> 
-              <li>Empresas</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="col-md-12">
-         <div class="navbar-header">
-          <a class="navbar-brand" href="#"><img class="" src="img/logo-claro.png" width="" height="50"/></a>
-          <h1>Administrador Virtual</h1>
-        </div>
-        </div>
-      </div>
     </nav>
-    <div class="bg-image">
-      <div class="container">
-      <div class="col-md-8">
-        <div class="hero-unit hidden-xs hidden-sm">
-          <h1>CONTROLA Y ADMINISTRA VÍA WEB</br> LA TELEFONÍA DE TUS CLIENTES</h1>
-          <ul>
-            <li>Permite mayor flexibilidad en tarifas por tipo de usuario, destino de llamadas y horario de llamadas.</li>
-            <li>Crea usuarios, roles y consulta la actividad de cada perfil.</li>
-            <li>Controla los gastos de telefonía en forma eficiente.</li>
-          </ul>
-          <p><a href="#" class="btn btn-primary btn-large">Aprender más »</a></p>
+    <div class="container bg-image">
+        <div class="col-md-8">
+            <div class="hero-unit hidden-xs hidden-sm">
+                <h1>CONTROLA Y ADMINISTRA VÍA WEB</br> LA TELEFONÍA DE TUS CLIENTES</h1>
+                <ul>
+                    <li>Permite mayor flexibilidad en tarifas por tipo de usuario, destino de llamadas y horario de llamadas.</li>
+                    <li>Crea usuarios, roles y consulta la actividad de cada perfil.</li>
+                    <li>Controla los gastos de telefonía en forma eficiente.</li>
+                </ul>
+                <p><a href="#" class="btn btn-primary btn-large">Aprender más »</a></p>
+            </div>
         </div>
-      </div>
-      <div class="col-md-4">
-        <form class="form-signin">
-          <div class="form-group">
-            <label for="inputEmail">USUARIO</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          </div>
-          <div class="form-group">
-            <label for="inputPassword">CLAVE</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" value="remember-me"> Recordarme
-            </label>
-          </div>
-          <a class="btn btn-lg btn-primary btn-block" href="5.1.0.html">Entrar</a>
-        </form>
-      </div>
-    </div>
+        <div class="col-md-4">
+            <form class="form-signin">
+                <div class="form-group">
+                <label for="inputEmail">USUARIO</label>
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                </div>
+                <div class="form-group">
+                <label for="inputPassword">CLAVE</label>
+                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                </div>
+                <div class="checkbox">
+                    <label>
+                      <input type="checkbox" value="remember-me"> Recordarme
+                    </label>
+                </div>
+                <a class="btn btn-lg btn-primary btn-block" href="5.1.0.html">Entrar</a>
+            </form>
+        </div>
     </div> <!-- /container -->
+    <div class="container second-floor">
+        <div class="row">
+            <div class="col-md-5">
+                <h3>AVI</h3>
+                <h4>Administrador Virtual</h4>
+                <p>El Servicio AVI de Claro está enfocado a controlar y Administrar su Telefonía Vía Web, ofreciéndole una Red Privada Virtual o VPN para tarificar llamadas en línea; una mayor flexibilidad en tarifas por tipo de usuario, destino y horario dellamadas. Además, le permite la gestión vía web sin la intervención de Claro y el Control de su Presupuesto Empresarial.</p>
+            </div>
+            <div class="col-md-3 col-md-offset-0">
+                <p>Integrar la red fija con la red móvil dentro de un mismo grupo, pero con facturación separada.</p>
+            </div>
+            <div class="col-md-3 col-md-offset-0">
+                <p>La tarificación en línea permite Administrar sus Tarifas Telefónicas permanentemente y un mayor control de Presupuesto Empresarial.</p>
+            </div>
+        </div>
+    </div>
     <footer class="signin">
       <div class="container">
         <div class="row">
